# insincere-question-classification

./: .flake8  .gitignore  .travis.yml  LICENSE  Lstm+cnn.ipynb  NLP CNN.ipynb  Quora_Insincere_Questions_Classification glove 0.05 test.ipynb  Quora_Insincere_Questions_Classification glove 0.7 test.ipynb  Quora_Insincere_Questions_Classification google news 0.05.ipynb  Quora_Insincere_Questions_Classification google news test 07.ipynb  Quora_Insincere_Questions_Classification. google news 0.1ipynb  Quora_Insincere_Questions_Classification. google newsipynb  Quora_Insincere_Questions_Classification.google news 0.1.ipynb  Quora_Insincere_Questions_Classification.ipynb  README.md  README.rst  Untitled9.ipynb  cnn,lstm_gru_with_preprocessing.ipynb  dropout_and_optimizer.ipynb  lemization_.ipynb  lstm+gru  lstm+gru with metaembeddings.ipynb  lstm+gru+cnn meta embeddings.ipynb  lstm+gru.ipynb  lstm+gru_in_parallel.ipynb  meta embeddings.ipynb  preprocess and data cleaning.ipynb  preprocessing_acording_to GNU .ipynb  preprocessing_acording_to.ipynb  pyproject.toml  renovate.json  test.ipynb  using ADAMAX optimizer.ipynb
insincere_question_classification/: train_and_save_model.ipynb  train_and_save_model.py
insincere_question_classification/misc/: generate_data_images.ipynb  generate_data_images.py  supervised_model.ipynb  supervised_model.py
insincere_question_classification/ui/: app.py  custom_object_scope.py
insincere_question_classification/ui/templates/: index.html
tests/: test_insincere_question_classification.py
