[tool.poetry]
name = "insincere-question-classification"
version = "0.1.0"
description = "Classification of insincere question using deep learning"
authors = ["Saurav Sharma <appdroiddeveloper@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "4.4.2"
flake8 = "3.7.7"
black = "19.3b0"
jupyter="1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
