[tool.poetry]
name = "insincere-question-classification"
version = "0.1.0"
description = "Classification of insincere question using deep learning"
authors = [
    "Saurav Sharma <appdroiddeveloper@gmail.com>",
    "Bishal Gaire <bgaire2053@gmail.com>",
    "Bishal Rijal <bishalrijal110@gmail.com>",
    "Dilip Gautam <hiddendreamz7@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
jupyter="1.0.0"
kaggle="1.5.5"
seaborn="0.9.0"
wordcloud="1.5.0"
tqdm="4.33.0"
keras="2.2.4"
flask="1.1.1"
tensorflow-gpu="1.14.0"
nltk="3.4.4"
scikit-learn="0.21.3"

[tool.poetry.dev-dependencies]
pytest = "5.1.0"
flake8 = "3.7.8"
black = "19.3b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
